[project]
name = '153957'
requires-python = '>=3.13'
version = '0.0.0'
dependencies = [
    'jinja2==3.1.6',
    'pelican[Markdown]==4.11.0',
    'pillow==11.3.0',
]

[dependency-groups]
dev = [
    'ruff==0.14.1',
    'ty==0.0.1a34',
]

[tool.ruff]
line-length = 120
target-version = 'py313'

[tool.ruff.format]
quote-style = 'single'  # Prefer single quotes, except for triple quotes strings

[tool.ruff.lint]
select = ['ALL']  # https://docs.astral.sh/ruff/rules/
ignore = [
    'CPY001',  # Do not require copyright notices
    'D213',  # Start multi-line docstring on first line
    'D203',  # Had to disable one of these (D211)
    'D400',  # Do not require . at end of first line in docstring
    'D415',  # Do not require ./!/? at end of first line in docstring
    'EM102',  # Allow f-string in exception message
    'SLF001',  # Allow accessing private attributes
    'TRY003',  # Allow long messages in exceptions
]

[tool.ruff.lint.flake8-quotes]
inline-quotes = 'single'

[tool.ruff.lint.isort]
lines-between-types = 1
section-order = [
    'future',
    'standard-library',
    'third-party',
    'pelican',
    'first-party',
    'local-folder',
]

[tool.ruff.lint.isort.sections]
pelican = ['pelican']
